--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePgaeTest.VarifyClickOnEmployeeLink()[pri:5, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">VarifyClickOnEmployeeLink</td> 
-  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:47</td>   <td>-3734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePgaeTest.VerifyHomepageTotalLiks()[pri:4, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">VerifyHomepageTotalLiks</td> 
-  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:33</td>   <td>-17518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePgaeTest.VerifyTitleHomePage()[pri:1, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">VerifyTitleHomePage</td> 
-  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:43</td>   <td>-7861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePgaeTest.VerifyUserId()[pri:3, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">VerifyUserId</td> 
-  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:29</td>   <td>-22058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePgaeTest.setUp()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:35</td>   <td>-15248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePgaeTest.setUp()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:39</td>   <td>-11169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePgaeTest.setUp()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:43</td>   <td>-7233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePgaeTest.setUp()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:47</td>   <td>-3496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePgaeTest.setUp()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:35</td>   <td>-15477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePgaeTest.tearDown()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:39</td>   <td>-11406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePgaeTest.tearDown()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:43</td>   <td>-7427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePgaeTest.tearDown()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:47</td>   <td>-3688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePgaeTest.tearDown()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:52</td>   <td>945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePgaeTest.tearDown()[pri:0, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/06 09:58:39</td>   <td>-11824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePgaeTest.verifyHomeVisibletext()[pri:2, instance:com.jala.qa.testcases.HomePgaeTest@38b27cdc]">verifyHomeVisibletext</td> 
-  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="72fe87">  <td>24/05/06 15:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultilpleTabsTest.getTitleOfMultileTabPage()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">getTitleOfMultileTabPage</td> 
+  <td>main@56861999</td>   <td></td> </tr>
+<tr bgcolor="72fe87">  <td>24/05/06 15:16:05</td>   <td>-10967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultilpleTabsTest.setUp()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
+<tr bgcolor="72fe87">  <td>24/05/06 15:16:16</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultilpleTabsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
 </table>
