Null exception value problem resoved for employee page and multiple tab page

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,4 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>click on employee tab working successfully</td></tr>
+<tr><td>click on More tab working successfully</td></tr>
+<tr><td>Employee info successfully saved</td></tr>
+</table>
