--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72fe87">  <td>24/05/07 14:35:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultilpleTabsTest.setUp()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">&gt;&gt;setUp</td> 
+<tr bgcolor="72fe87">  <td>24/05/07 16:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/07 14:35:56</td>   <td>11409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultilpleTabsTest.getTitleOfMultileTabPage()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">getTitleOfMultileTabPage</td> 
+<tr bgcolor="72fe87">  <td>24/05/07 16:44:11</td>   <td>7521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation()[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">VarifyNewEmployeeDetailsCreation</td> 
   <td>main@56861999</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/07 14:35:56</td>   <td>11421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultilpleTabsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@327bcebd]">&lt;&lt;tearDown</td> 
+<tr bgcolor="72fe87">  <td>24/05/07 16:44:23</td>   <td>19477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
 </table>
