--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -3,6 +3,7 @@
 <tr><td>click on employee tab and more tab working successfully</td></tr>
 <tr><td>Employee info successfully saved</td></tr>
 <tr><td>click on employee tab and more tab working successfully</td></tr>
+<tr><td>Employee info successfully saved</td></tr>
 <tr><td>click on employee tab and more tab working successfully</td></tr>
 <tr><td>Employee info successfully saved</td></tr>
 </table>
