Slider, Images, CollpasConentent Tabs successfully done

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Multiple tab page title matched</td></tr>
+<h2>Reporter output</h2><table><tr><td>Slider moved successfully</td></tr>
 </table>
