--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 14:48:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultilpleTabsTest.getTitleOfMultileTabPage()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">getTitleOfMultileTabPage</td> 
+<tr bgcolor="eccb8e">  <td>24/05/12 16:10:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SliderPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/12 16:10:38</td>   <td>12013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SliderPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/12 16:10:37</td>   <td>11100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SliderPageTest.validateSliderMover()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">validateSliderMover</td> 
   <td>main@1808432653</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 14:48:06</td>   <td>-8333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultilpleTabsTest.setUp()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 14:48:14</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultilpleTabsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
 </table>
